--- a/QBOTECH.DELIVERY.API/appsettings.json
+++ b/QBOTECH.DELIVERY.API/appsettings.json
@@ -7,6 +7,6 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "DevConnection": "server=qbotech.net;port=3306;uid=qbotech_userdelivery;pwd=BNy8FN25H&@h;database=qbotech_delivery"
+    "DevConnection": ""
   }
 }
