Añadir autenticación JWT y mejoras en usuarios
Se han añadido atributos de autorización a los controladores `DeliveriesController` y `UsersController`, requiriendo autenticación para acceder a sus acciones.

El método de inicio de sesión en `UsersService` ahora devuelve un objeto `UsersResponseDTO` con un token JWT. Se ha implementado la clase `JWTSettings` y el servicio `JWTService` para gestionar la generación de tokens.

Se ha creado un método de extensión `AddSharedInfrastructure` para registrar servicios JWT en el contenedor de inyección de dependencias. Además, se han actualizado las configuraciones en `Program.cs` para incluir CORS y Swagger.

Las interfaces `IUsersService` e `IUsersRepository` se han actualizado para reflejar los cambios en la lógica de inicio de sesión. Se han añadido nuevas propiedades a las clases `Users` y `UsersResponseDTO` para manejar información adicional del usuario.

Se han eliminado métodos obsoletos y se han simplificado implementaciones en varios servicios y repositorios. También se han añadido referencias a paquetes necesarios para la autenticación JWT y se ha actualizado `appsettings.json` con la configuración correspondiente.

--- a/QBOTECH.DELIVERY.API/appsettings.json
+++ b/QBOTECH.DELIVERY.API/appsettings.json
@@ -8,5 +8,11 @@
   "AllowedHosts": "*",
   "ConnectionStrings": {
     "DevConnection": ""
+  },
+  "JWTSettings": {
+    "SecretKey": "",
+    "Issuer": "",
+    "Audience": "",
+    "DurationInMinutes": 1
   }
 }
