--- a/QBOTECH.DELIVERY.CORE/QBOTECH.DELIVERY.CORE.csproj
+++ b/QBOTECH.DELIVERY.CORE/QBOTECH.DELIVERY.CORE.csproj
@@ -6,4 +6,9 @@
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="Microsoft.Extensions.Configuration.Abstractions" Version="9.0.5" />
+    <PackageReference Include="System.IdentityModel.Tokens.Jwt" Version="8.12.0" />
+  </ItemGroup>
+
 </Project>
