--- a/QBOTECH.DELIVERY.INFRASTRUCTURE/QBOTECH.DELIVERY.INFRASTRUCTURE.csproj
+++ b/QBOTECH.DELIVERY.INFRASTRUCTURE/QBOTECH.DELIVERY.INFRASTRUCTURE.csproj
@@ -7,6 +7,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="9.0.5" />
     <PackageReference Include="Microsoft.EntityFrameworkCore" Version="8.0.11" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.Relational" Version="8.0.11" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.Tools" Version="8.0.11">
